--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-svg": "^13.8.0"
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
